# Network-Security-Scanner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  config.yaml  logger.py  risk_database.yaml
scanner/: __init__.py  history.py  port_scanner.py  report_generator.py  risk_analyzer.py  service_detector.py  validator.py
tests/: conftest.py  test_config.py  test_history.py  test_main_helpers.py  test_report_generator.py  test_risk_analyzer.py  test_validator.py
