[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-security-scanner"
version = "2.1.0"
description = "Automated network reconnaissance, service detection, risk classification, and multi-format reporting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["security", "nmap", "port-scanner", "reconnaissance", "sarif", "cvss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "python-nmap>=0.7.1",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
nss = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["config", "scanner"]

[tool.setuptools.package-data]
config = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
